idf_component_register(
SRCS
    "main.c"
    "led/led.c"
    "uart/uart.c"
    "wifi/wifi.c"
    "mqtt/mqtt.c"
    "dht11/dht11.c"
PRIV_REQUIRES
    spi_flash
    esp_driver_gpio
    esp_driver_uart
    esp_wifi
    esp_netif
    esp_event
    nvs_flash
    mqtt
INCLUDE_DIRS
    ""
    "led"
    "uart"
    "wifi"
    "mqtt"
    "dht11"
)
